# Xmin

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  README.txt  UPSTREAM.toml  interaction.txt  launch.sh  modernize.txt  qt_building.txt  xmincapture.sh  xminlaunch.sh
LICENSES/: README.md
cmake/: EmbedGoFonts.cmake  VerifyInstall.cmake  WriteModernizationMetrics.cmake  XminComponent.cmake  XminConfig.cmake.in  XminOptions.cmake  XminPlatform.cmake  XminProtocolProfile.cmake  XminWarnings.cmake  dix-config.h.in  libxcb-config.h.in  libxkbcommon-config.h.in  pixman-config.h.in  version-config.h.in  xfont-config.h.in  xkb-config.h.in  xmin_config.h.in
data/: CMakeLists.txt
profiles/: protocol-coverage.json  protocol.json
src/: CMakeLists.txt
src/client/glx/: CMakeLists.txt  xmin_glx_client.c  xmin_glx_client.cpp  xmin_osmesa_adapter.h
src/client/glx/include/GL/: gl.h  glext.h  glx.h  glxext.h
src/client/glx/include/Xmin/: GLXxcb.h
src/client/x11/: CMakeLists.txt  client_connection.cpp  client_connection.hpp  libxminclient.map  x11_colors.inc  xcb_core.cpp  xcb_helpers.cpp  xcb_protocol.hpp  xcb_render_glyphs.cpp  xcb_toolkit_wire.cpp  xcb_wire.cpp  xkb_minimal.cpp  xlib_core.cpp  xlib_events.cpp  xlib_internal.hpp  xlib_minimal.cpp  xlib_region.cpp  xlib_wm.cpp
src/client/x11/font/: embedded_fonts.hpp  font_engine.cpp  font_engine.hpp  fontconfig_minimal.cpp  render_font.cpp  render_font.hpp  struetype_impl.cpp  xft_minimal.cpp
src/client/x11/include/X11/: Xlib-xcb.h  Xlibint.h
src/client/x11/include/X11/Xft/: Xft.h
src/client/x11/include/fontconfig/: fontconfig.h
src/client/x11/include/xcb/: glx.h  present.h  xkb.h
src/control/: CMakeLists.txt  xmin_client.cpp  xmin_client.h  xmin_keysyms.h  xmin_xcb_connect.c  xmin_xcb_connect.h  xminctl.c  xminctl.cpp
src/desktop/: CMakeLists.txt  jwm-config.h.in  session.cpp
src/desktop/terminal/: pty_unix.c  xmin_pty_backend.h
src/dix/: CMakeLists.txt
src/extensions/: CMakeLists.txt
src/fb/: CMakeLists.txt
src/fonts/: xmin_builtin_file.c  xmin_xfont_registry.c
src/glx/: CMakeLists.txt  xmin_glx_osmesa.c
src/glx/include/GL/: gl.h  glext.h
src/hw/vfb/: CMakeLists.txt
src/launcher/: CMakeLists.txt  main.c  main.cpp  xmin_authority.c  xmin_launcher.h
src/mi/: CMakeLists.txt
src/next/: CMakeLists.txt  atom_table.cpp  clock.cpp  color.cpp  compatibility_protocol.cpp  composite_protocol.cpp  connection.cpp  core_protocol.cpp  core_raster.cpp  cursor_protocol.cpp  damage_protocol.cpp  display_socket.cpp  font.cpp  font_protocol.cpp  main.cpp  present_protocol.cpp  property_data.cpp  randr_protocol.cpp  raster_protocol.cpp  region.cpp  render.cpp  render_protocol.cpp  server.cpp  server_state.cpp  shared_memory.cpp  shm_protocol.cpp  surface.cpp  wire.cpp  xauthority.cpp  xfixes_protocol.cpp  xinput_legacy_protocol.cpp  xinput_protocol.cpp  xkb_protocol.cpp
src/next/include/xmin/next/: atom_table.hpp  checked.hpp  client_event.hpp  clock.hpp  color.hpp  connection.hpp  core_raster.hpp  display_socket.hpp  extension_registry.hpp  font.hpp  property_data.hpp  region.hpp  render.hpp  resource_registry.hpp  result.hpp  server.hpp  server_state.hpp  shared_memory.hpp  surface.hpp  unique_fd.hpp  wire.hpp  xauthority.hpp
src/os/: CMakeLists.txt
src/server/: CMakeLists.txt  atom_table.cpp  clock.cpp  color.cpp  compatibility_protocol.cpp  composite_protocol.cpp  connection.cpp  core_protocol.cpp  core_raster.cpp  cursor_protocol.cpp  damage_protocol.cpp  display_socket.cpp  font.cpp  font_protocol.cpp  glx_protocol.cpp  main.c  main.cpp  present_protocol.cpp  property_data.cpp  randr_protocol.cpp  raster_protocol.cpp  region.cpp  render.cpp  render_protocol.cpp  server.cpp  server_state.cpp  shared_memory.cpp  shm_protocol.cpp  surface.cpp  wire.cpp  xauthority.cpp  xfixes_protocol.cpp  xinput_legacy_protocol.cpp  xinput_protocol.cpp  xkb_protocol.cpp
src/server/include/xmin/server/: atom_table.hpp  checked.hpp  client_event.hpp  clock.hpp  color.hpp  connection.hpp  core_raster.hpp  display_socket.hpp  extension_registry.hpp  font.hpp  property_data.hpp  region.hpp  render.hpp  resource_registry.hpp  result.hpp  server.hpp  server_state.hpp  shared_memory.hpp  surface.hpp  unique_fd.hpp  wire.hpp  xauthority.hpp
src/support/: CMakeLists.txt  xmin_sha1.c
src/viewer/: CMakeLists.txt  main.cpp  viewer_stub.cpp  viewer_transport.hpp  viewer_xcb.cpp
src/xkb/: CMakeLists.txt  xmin_xkb_case.c  xmin_xkb_keymap.c  xmin_xkb_keymap.h
tests/: CMakeLists.txt  README.md  builtin_fonts.c  damage_report.c  desktop_stress.sh  dix_atoms.c  dix_callbacks.c  dix_regions.c  dix_resources.c  dix_swaps.c  fb_solid.c  font_engine.cpp  foundation.cpp  mit_cookie.c  next_foundation.cpp  next_platform.cpp  pixman_regions.c  platform.cpp  present_msc.c  protocol_headers.c  randr_transform.c  render_transform.c  sha1.c  sync_fence.c  vfb_config.c  xau_read.c  xfixes_disconnect.c  xi_property.c  xkb_alloc.c  xkb_embedded.c  xtrans_local.c
tests/glx/: osmesa_context.c  osmesa_separate.c  software_direct_glsl.c  software_direct_window.c
tests/gtk/: raster.c
tests/integration/: font_render.cpp  glx_render.c  handshake.cpp  launcher_child.c  launcher_concurrent.c  launcher_signal.c  next_handshake.cpp  next_standalone.cpp  qt_client.c  qt_client_core.c  server_handshake.c  server_stale_lock.c  standalone.cpp  toolkit_xlib.cpp  xcb_composite_state.c  xcb_core.c  xcb_damage_state.c  xcb_extensions.c  xcb_ge_query.h  xcb_present_state.c  xcb_randr_state.c  xcb_raster.c  xcb_shm_state.c  xcb_xfixes_state.c  xcb_xi2_state.c  xcb_xkb_state.c  xcb_xtest_state.c  xft_client.cpp  xkbcommon_state.c  xminctl_integration.c  xminctl_target.c
tests/package/qt_client/: CMakeLists.txt  qt_client_compile.cpp
tests/package/qt_opengl/: CMakeLists.txt
tests/package/qt_raster/: CMakeLists.txt
tests/qt/: input.cpp  input_driver.c  multiclient.cpp  opengl.cpp  opengl_widget.cpp  raster.cpp
tools/: README.md  audit-qt-bundle.sh  capture-next-core-keymap.c  dash-files.txt  (+19 more)
(+36 files in other folders)
